--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ locale                   : "en-US"
 title                    : "나의 개발 일지"
 title_separator          : "-"
 subtitle                 : "쇼콜라끼삐또리"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "강동희"
+description              : "My Blog"
 url                      : "https://chocolaggibbiddori.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "chocolaggibbiddori/chocolaggibbiddori.github.io"
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "강동희"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "hello"
+  bio              : "제 블로그에 오신걸 환영합니다."
   location         : "경기도 시흥시"
   email            : "didrkd684@naver.com"
   links:
