--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko-KR"
 title                    : "나의 개발 일지"
 title_separator          : "-"
 subtitle                 : "쇼콜라끼삐또리"
@@ -25,8 +25,8 @@ url                      : "https://chocolaggibbiddori.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "chocolaggibbiddori/chocolaggibbiddori.github.io"
 teaser                   : # "/assets/images/500x300.png"
-logo                     : "/assets/images/apple-touch-icon-76x76.png"
-masthead_title           : "My Blogs"
+logo                     : "/assets/images/apple-touch-icon-precomposed.png"
+masthead_title           : "My Blog"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
