--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,5 +12,5 @@ main:
   #   url: /sitemap/
   - title: "검색"
     url: /search/
-  - title: "카테고리
-    url: /categories
+  - title: "카테고리"
+    url: /categories/
