--- a/_config.yml
+++ b/_config.yml
@@ -282,7 +282,7 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type: pages
+      type: posts
     values:
       layout: single
       author_profile: false
@@ -291,3 +291,5 @@ defaults:
       share: false
       related: false
       show_date: true
+      toc: true
+      classes: wide
