--- a/_config.yml
+++ b/_config.yml
@@ -217,7 +217,7 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 8 # amount of posts to show
 paginate_path: /page:num/
 timezone: Asia/Seoul
 
@@ -252,9 +252,13 @@ whitelist:
 category_archive:
   type: liquid
   path: /categories/
+  excerpt_separator: "\n\n"
+
 tag_archive:
   type: liquid
   path: /tags/
+  excerpt_separator: "\n\n"
+
 # https://github.com/jekyll/jekyll-archives
 jekyll-archives:
   enabled:
