--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin: "dirt" # "air", "aqua", "contrast", "dark", "dirt", "neon
 
 # Site Settings
 locale: "ko-KR"
-title: "뇌의 외장 하드"
+title: "뇌장 하드"
 title_separator: "-"
 subtitle: "개발 기록"
 name: "이준희"
@@ -26,7 +26,7 @@ baseurl: # the subpath of your site, e.g. "/blog"
 repository: "junheiLee/junheiLee.github.io"
 teaser: # "/assets/images/500x300.png"
 logo: # "../docs/assets/images/apple-touch-icon-precomposed.png"
-masthead_title: "뇌의 외장하드"
+masthead_title: "뇌장하드"
 breadcrumbs: true
 words_per_minute: 200
 comments:
